# CDK-Package

./: .copier-answers.yml  LICENSE  README.md  cdktest.py  pyproject.toml
Lecture08/Part1/: 08_drfp_partA.ipynb  08_drfp_partB.ipynb
Lecture08/Part2/: 08_from_script_to_package.ipynb
docs/source/: conf.py
src/CDK-Package/: __init__.py
tests/: test_example_module.py
